# CommandCenter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start-mjolnir.ps1
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yaml
dashboard/: index.html  openapi.json  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  format.ts  live.ts  styles.css
dashboard/src/api/: client.ts  schema.d.ts  types.ts
dashboard/src/views/: EventsView.tsx  FleetView.tsx  InboxView.tsx  InteractionCard.tsx  SessionView.tsx
docker/: Dockerfile  README.md
docs/: contributing.md  goals-and-non-goals.md  plans-interactive-mediation.md  plans-voice-fixes.md  roadmap.md  vision.md
docs/adr/: 0001-language-python.md  0002-in-process-event-bus.md  0003-sqlite-default-storage.md  0004-adapter-capability-model.md  0005-plugins-via-entry-points.md  0006-license-apache2.md  0007-interactions-cancelled-on-restart.md  0008-claude-code-control-via-agent-sdk.md  0009-phase3-adapters-aider-and-codex.md  0010-voice-engines-hosted-by-client.md  0011-interactive-mediation-via-permission-hook.md  0012-llm-intent-router.md  template.md
docs/architecture/: adapter-specification.md  dashboard.md  event-model.md  mediation.md  overview.md  plugin-system.md  repository-layout.md  voice-pipeline.md
docs/deployment/: satellite-pi.md
docs/development/: coding-standards.md  environment.md  plugin-packaging.md
examples/: README.md
examples/adapter-skeleton/: README.md  pyproject.toml
examples/adapter-skeleton/src/prodeo_adapter_skeleton/: __init__.py  adapter.py
examples/adapter-skeleton/tests/: test_conformance.py
scripts/: README.md  export_openapi.py
src/prodeo/: __init__.py  config.py  errors.py  logging.py  server.py
src/prodeo/adapters/: __init__.py  context.py  interface.py  manager.py  observations.py
src/prodeo/adapters/testing/: __init__.py  suite.py
src/prodeo/adapters/tests/: test_manager.py
src/prodeo/api/: __init__.py  app.py  auth.py
src/prodeo/api/tests/: test_rest.py
src/prodeo/bus/: __init__.py  inproc.py  interface.py
src/prodeo/bus/tests/: test_inproc.py
src/prodeo/events/: __init__.py  envelope.py  types.py
src/prodeo/events/tests/: test_envelope.py
src/prodeo/mediation/: __init__.py  model.py  service.py
src/prodeo/mediation/tests/: test_service.py
src/prodeo/notify/: __init__.py  interface.py  service.py
src/prodeo/notify/channels/: __init__.py  desktop.py  log.py  ntfy.py
src/prodeo/notify/tests/: test_channels.py  test_service.py
src/prodeo/persistence/: __init__.py  interface.py  recorder.py  retention.py  sqlite.py
src/prodeo/persistence/testing/: __init__.py  suite.py
src/prodeo/persistence/tests/: test_retention.py  test_sqlite_store.py
src/prodeo/plugins/: __init__.py  host.py
src/prodeo/plugins/tests/: test_host.py
src/prodeo/presence/: __init__.py  tracker.py
src/prodeo/presence/tests/: test_tracker.py
src/prodeo/scheduler/: __init__.py  cron.py  model.py  service.py
src/prodeo/scheduler/tests/: test_cron.py  test_service.py
src/prodeo/sessions/: __init__.py  model.py  registry.py  state.py
src/prodeo/sessions/tests/: test_registry.py  test_state.py
src/prodeo/summary/: __init__.py  interface.py  service.py
src/prodeo/summary/tests/: test_service.py
tests/: README.md
tests/integration/: test_interactive_hook_flow.py  test_mediate_flow.py  test_observe_flow.py  test_orchestrate_flow.py  test_server_boot.py  test_voice_flow.py
